fix layout bug

--- a/src/forms.styl
+++ b/src/forms.styl
@@ -225,29 +225,29 @@ main, .field
 
         &::-webkit-slider-runnable-track
           background var(--accent)
-          height 0.5rem
-          border-radius 0.5rem
+          height 0.25rem
+          border-radius 0.25rem
 
         &::-moz-range-track
           background var(--accent)
-          height 0.5rem
-          border-radius 0.5rem
+          height 0.25rem
+          border-radius 0.25rem
 
         &::-webkit-slider-thumb
           -webkit-appearance: none
           appearance none
-          margin-top -4px
+          margin-top -5px
           background-color var(--foreground)
-          height 1rem
-          width 1rem
-          border-radius 50%
+          height 0.75rem
+          width 0.25rem
+          border-radius 2px
 
         &::-moz-range-thumb
           border none
-          border-radius 50%
+          border-radius 2px
           background-color var(--foreground)
-          height 1rem
-          width 1rem
+          height 0.75rem
+          width 0.25rem
 
       & > datalist
         order 2
